--- a/style.css
+++ b/style.css
@@ -4,97 +4,95 @@
 }
 
 body{
-    width: 100%;
-    height: 100%;
+    min-height: 100vh;
     background-color: rgb(26, 26, 30);
 }
 
-.header_section{
-    width: 100%;
-    height: 100px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: center;
-}
-
-.container{
-    width: 1320px;
-    height: 100px;
-    
-}
-
-.header-wrapper{
-    width: 1296px;
-    height: 100px;
-    display: flex;
-    flex-wrap: wrap;
-    align-items: center;
-    justify-content: space-between;
-}
-
-.main_logo{
-    height: 100px;
-    width: 120px;
+.header_wrapper{
+    background-color: rgb(26, 26, 30, 0.5);
+    backdrop-filter: blur(10px);
+    box-shadow: 3px 3px 5px rgba(0, 0, 0, 0.1);
 }
 
 .logo{
     width: 100px;
     height: 80px;
-    margin-top: 15px;
-    margin-left: 10px;
+    margin-left: 30px;
 }
 
-
-.main-menu ul{
+nav ul{
     width: 100%;
     list-style: none;
     display: flex;
     justify-content: flex-end;
     align-items: center;
-    margin-left: 33px;
-    margin-right: 60px;
 }
 
-.main-menu li{
-    height: 100px;
+nav li{
+    height: 80px; 
 }
 
-.main-menu a{
-    height: 100px;
+nav a {
+    height: 100%;
     padding: 0 30px;
     text-decoration: none;
+    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
+    text-transform: uppercase;
+    font-weight: 600;
+    font-size: 14px;
     display: flex;
     align-items: center;
     color: white;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-size: 16px;
-    font-weight: bold;
-    text-transform: uppercase;
 }
 
-.main-menu a:hover{
-    color: rgb(239, 255, 140);
+#links:hover{
+   color: rgb(239, 255, 140);
+   background-color: rgb(255, 255, 255, 0.2);
 }
 
-#talkbtn{
-    color: black;
-    background-color: rgb(239, 255, 140);
-    width: 180px;
-    height: 60px;
-    border-radius: 5px;
-    margin: 10px;
+nav li:first-child{
+    margin-right: auto;
 }
 
-#talkbtn a{
-    text-decoration: none;
-    color: black;
-    font-family: 'Trebuchet MS', 'Lucida Sans Unicode', 'Lucida Grande', 'Lucida Sans', Arial, sans-serif;
-    font-weight: bold;
-    text-align: center;
-    font-size: 16px;
+.sidebar{
+    position: fixed;
+    top: 0;
+    right: 0;
+    height: 100vh;
+    width: 250px;
+    z-index: 999;
+    background-color: rgb(26, 26, 30, 0.9);
+    backdrop-filter: blur(10px);
+    box-shadow: -10px 0 10px rgba(0, 0, 0, 0.1);
+    display: none;
+    flex-direction: column;
+    align-items: flex-start;
+    justify-content: flex-start;
+}
+.sidebar li{
+    width: 100%;
+}
+.sidebar a{
+    width: 100%;
+}
+.menu-button{
+    display: none;
 }
 
+@media(max-width: 800px){
+    .hideOnMobile{
+        display: none;
+    }
+    .menu-button{
+        display: block;
+    }
+}
+
+@media(max-width: 400px){
+    .sidebar{
+        width: 100%;
+    }
+}
 
 .main_section{
     width: 100%;
