--- a/style.css
+++ b/style.css
@@ -6,6 +6,7 @@
 body{
     min-height: 100vh;
     background-color: rgb(26, 26, 30);
+    background-image: linear-gradient(135deg, rgba(26, 26, 30, 1), rgba(26, 26, 30, 1), rgba(26, 26, 30, 1));
 }
 
 .header_wrapper{
@@ -94,30 +95,28 @@ nav li:first-child{
     }
 }
 
-.main_section{
+.main_container{
     width: 100%;
     height: fit-content ;
     display: flex;
     flex-wrap: wrap;
     align-items: center;
     justify-content: center;
-}
-
-.main_container{
-    width: 1320px;
+    width: 100%;
     height: fit-content;
     display: flex;
 }
 
 #home{
-    width: 1296px;
-    height: 600px;
+    width: 100%;
+    height: 700px;
     display: flex;
 }
 
 .intro{
     width: 60%;
-    height: 600px;
+    height: fit-content;
+    margin-left: 50px;
     justify-content: center;
     float:left;
 }
@@ -167,7 +166,7 @@ nav li:first-child{
 
 .profile{
     width: 40%;
-    height: 600px;
+    height: fit-content;
 }
 
 #profileImg{
